Revisando toda la mejora de la app vercion av40

--- a/AlarmaVecinal/app/src/main/AndroidManifest.xml
+++ b/AlarmaVecinal/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSRD1UpmBYBueQcmF_zwJ_iakT0CUXpRRDlQ" />
+            android:value="@string/google_maps_key" />
 
         <activity android:name=".Mapas.MapaEmergencia" />
         <activity
