--- a/AlarmaVecinal/app/build.gradle
+++ b/AlarmaVecinal/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
+    //Volley
+    implementation 'com.android.volley:volley:1.1.1'
+
 }
